// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AbstractCLI with mocked child_process.spawn changesets.info({"branchId": "branch-id", "projectId": "project-id", "sha": "commit-sha"}) 1`] = `
Array [
  "./fixtures/abstract-cli",
  Array [
    "--user-token",
    "abstract-token",
    "--api-url",
    "https://api.goabstract.com",
    "changeset",
    "project-id",
    "--commit",
    "commit-sha",
    "--branch",
    "branch-id",
  ],
  Object {
    "cwd": "<PROJECT_ROOT>",
  },
]
`;

exports[`AbstractCLI with mocked child_process.spawn collections.info({"branchId": "branch-id", "collectionId": "collection-id", "projectId": "project-id"}) 1`] = `
Array [
  "./fixtures/abstract-cli",
  Array [
    "--user-token",
    "abstract-token",
    "--api-url",
    "https://api.goabstract.com",
    "collection",
    "project-id",
    "collection-id",
  ],
  Object {
    "cwd": "<PROJECT_ROOT>",
  },
]
`;

exports[`AbstractCLI with mocked child_process.spawn collections.list({"branchId": "branch-id", "projectId": "project-id"}) 1`] = `
Array [
  "./fixtures/abstract-cli",
  Array [
    "--user-token",
    "abstract-token",
    "--api-url",
    "https://api.goabstract.com",
    "collections",
    "project-id",
    "--branch",
    "branch-id",
  ],
  Object {
    "cwd": "<PROJECT_ROOT>",
  },
]
`;

exports[`AbstractCLI with mocked child_process.spawn collections.list({"projectId": "project-id"}) 1`] = `
Array [
  "./fixtures/abstract-cli",
  Array [
    "--user-token",
    "abstract-token",
    "--api-url",
    "https://api.goabstract.com",
    "collections",
    "project-id",
  ],
  Object {
    "cwd": "<PROJECT_ROOT>",
  },
]
`;

exports[`AbstractCLI with mocked child_process.spawn commits.info({"branchId": "branch-id", "fileId": "file-id", "layerId": "layer-id", "pageId": "page-id", "projectId": "project-id", "sha": "layer-sha"}) 1`] = `
Array [
  "./fixtures/abstract-cli",
  Array [
    "--user-token",
    "abstract-token",
    "--api-url",
    "https://api.goabstract.com",
    "commit",
    "project-id",
    "layer-sha",
  ],
  Object {
    "cwd": "<PROJECT_ROOT>",
  },
]
`;

exports[`AbstractCLI with mocked child_process.spawn commits.info({"branchId": "branch-id", "fileId": "file-id", "layerId": "layer-id", "pageId": "page-id", "projectId": "project-id", "sha": "sha"}) 1`] = `
Array [
  "./fixtures/abstract-cli",
  Array [
    "--user-token",
    "abstract-token",
    "--api-url",
    "https://api.goabstract.com",
    "commit",
    "project-id",
    "sha",
  ],
  Object {
    "cwd": "<PROJECT_ROOT>",
  },
]
`;

exports[`AbstractCLI with mocked child_process.spawn commits.info({"branchId": "branch-id", "fileId": "file-id", "projectId": "project-id", "sha": "sha"}) 1`] = `
Array [
  "./fixtures/abstract-cli",
  Array [
    "--user-token",
    "abstract-token",
    "--api-url",
    "https://api.goabstract.com",
    "commit",
    "project-id",
    "sha",
  ],
  Object {
    "cwd": "<PROJECT_ROOT>",
  },
]
`;

exports[`AbstractCLI with mocked child_process.spawn commits.info({"branchId": "branch-id", "fileId": "file-id", "projectId": "project-id"}) 1`] = `
Array [
  "./fixtures/abstract-cli",
  Array [
    "--user-token",
    "abstract-token",
    "--api-url",
    "https://api.goabstract.com",
    "commit",
    "project-id",
    "branch-id",
  ],
  Object {
    "cwd": "<PROJECT_ROOT>",
  },
]
`;

exports[`AbstractCLI with mocked child_process.spawn commits.info({"branchId": "branch-id", "projectId": "project-id", "sha": "sha"}) 1`] = `
Array [
  "./fixtures/abstract-cli",
  Array [
    "--user-token",
    "abstract-token",
    "--api-url",
    "https://api.goabstract.com",
    "commit",
    "project-id",
    "sha",
  ],
  Object {
    "cwd": "<PROJECT_ROOT>",
  },
]
`;

exports[`AbstractCLI with mocked child_process.spawn commits.info({"branchId": "branch-id", "projectId": "project-id"}) 1`] = `
Array [
  "./fixtures/abstract-cli",
  Array [
    "--user-token",
    "abstract-token",
    "--api-url",
    "https://api.goabstract.com",
    "commit",
    "project-id",
    "branch-id",
  ],
  Object {
    "cwd": "<PROJECT_ROOT>",
  },
]
`;

exports[`AbstractCLI with mocked child_process.spawn commits.list({"branchId": "branch-id", "fileId": "file-id", "layerId": "layer-id", "pageId": "page-id", "projectId": "project-id", "sha": "layer-sha"}) 1`] = `
Array [
  "./fixtures/abstract-cli",
  Array [
    "--user-token",
    "abstract-token",
    "--api-url",
    "https://api.goabstract.com",
    "commits",
    "project-id",
    "branch-id",
    "--layer-id",
    "layer-id",
  ],
  Object {
    "cwd": "<PROJECT_ROOT>",
  },
]
`;

exports[`AbstractCLI with mocked child_process.spawn commits.list({"branchId": "branch-id", "fileId": "file-id", "layerId": "layer-id", "pageId": "page-id", "projectId": "project-id", "sha": "sha"}) 1`] = `
Array [
  "./fixtures/abstract-cli",
  Array [
    "--user-token",
    "abstract-token",
    "--api-url",
    "https://api.goabstract.com",
    "commits",
    "project-id",
    "branch-id",
    "--layer-id",
    "layer-id",
  ],
  Object {
    "cwd": "<PROJECT_ROOT>",
  },
]
`;

exports[`AbstractCLI with mocked child_process.spawn commits.list({"branchId": "branch-id", "fileId": "file-id", "projectId": "project-id", "sha": "sha"}) 1`] = `
Array [
  "./fixtures/abstract-cli",
  Array [
    "--user-token",
    "abstract-token",
    "--api-url",
    "https://api.goabstract.com",
    "commits",
    "project-id",
    "branch-id",
    "--file-id",
    "file-id",
  ],
  Object {
    "cwd": "<PROJECT_ROOT>",
  },
]
`;

exports[`AbstractCLI with mocked child_process.spawn commits.list({"branchId": "branch-id", "fileId": "file-id", "projectId": "project-id"}) 1`] = `
Array [
  "./fixtures/abstract-cli",
  Array [
    "--user-token",
    "abstract-token",
    "--api-url",
    "https://api.goabstract.com",
    "commits",
    "project-id",
    "branch-id",
    "--file-id",
    "file-id",
  ],
  Object {
    "cwd": "<PROJECT_ROOT>",
  },
]
`;

exports[`AbstractCLI with mocked child_process.spawn commits.list({"branchId": "branch-id", "projectId": "project-id", "sha": "sha"}) 1`] = `
Array [
  "./fixtures/abstract-cli",
  Array [
    "--user-token",
    "abstract-token",
    "--api-url",
    "https://api.goabstract.com",
    "commits",
    "project-id",
    "branch-id",
  ],
  Object {
    "cwd": "<PROJECT_ROOT>",
  },
]
`;

exports[`AbstractCLI with mocked child_process.spawn commits.list({"branchId": "branch-id", "projectId": "project-id"}) 1`] = `
Array [
  "./fixtures/abstract-cli",
  Array [
    "--user-token",
    "abstract-token",
    "--api-url",
    "https://api.goabstract.com",
    "commits",
    "project-id",
    "branch-id",
  ],
  Object {
    "cwd": "<PROJECT_ROOT>",
  },
]
`;

exports[`AbstractCLI with mocked child_process.spawn data.layer({"branchId": "branch-id", "fileId": "file-id", "layerId": "layer-id", "pageId": "page-id", "projectId": "project-id", "sha": "layer-sha"}) 1`] = `
Array [
  "./fixtures/abstract-cli",
  Array [
    "--user-token",
    "abstract-token",
    "--api-url",
    "https://api.goabstract.com",
    "layer",
    "data",
    "project-id",
    "layer-sha",
    "file-id",
    "layer-id",
  ],
  Object {
    "cwd": "<PROJECT_ROOT>",
  },
]
`;

exports[`AbstractCLI with mocked child_process.spawn data.layer({"branchId": "branch-id", "fileId": "file-id", "layerId": "layer-id", "pageId": "page-id", "projectId": "project-id", "sha": "sha"}) 1`] = `
Array [
  "./fixtures/abstract-cli",
  Array [
    "--user-token",
    "abstract-token",
    "--api-url",
    "https://api.goabstract.com",
    "layer",
    "data",
    "project-id",
    "sha",
    "file-id",
    "layer-id",
  ],
  Object {
    "cwd": "<PROJECT_ROOT>",
  },
]
`;

exports[`AbstractCLI with mocked child_process.spawn files.info({"branchId": "branch-id", "fileId": "file-id", "projectId": "project-id", "sha": "sha"}) 1`] = `
Array [
  "./fixtures/abstract-cli",
  Array [
    "--user-token",
    "abstract-token",
    "--api-url",
    "https://api.goabstract.com",
    "file",
    "project-id",
    "sha",
    "file-id",
  ],
  Object {
    "cwd": "<PROJECT_ROOT>",
  },
]
`;

exports[`AbstractCLI with mocked child_process.spawn files.info({"branchId": "branch-id", "fileId": "file-id", "projectId": "project-id"}) 1`] = `
Array [
  "./fixtures/abstract-cli",
  Array [
    "--user-token",
    "abstract-token",
    "--api-url",
    "https://api.goabstract.com",
    "file",
    "project-id",
    "branch-id",
    "file-id",
  ],
  Object {
    "cwd": "<PROJECT_ROOT>",
  },
]
`;

exports[`AbstractCLI with mocked child_process.spawn files.list({"branchId": "branch-id", "projectId": "project-id", "sha": "commit-sha"}) 1`] = `
Array [
  "./fixtures/abstract-cli",
  Array [
    "--user-token",
    "abstract-token",
    "--api-url",
    "https://api.goabstract.com",
    "files",
    "project-id",
    "commit-sha",
  ],
  Object {
    "cwd": "<PROJECT_ROOT>",
  },
]
`;

exports[`AbstractCLI with mocked child_process.spawn files.list({"branchId": "branch-id", "projectId": "project-id", "sha": "sha"}) 1`] = `
Array [
  "./fixtures/abstract-cli",
  Array [
    "--user-token",
    "abstract-token",
    "--api-url",
    "https://api.goabstract.com",
    "files",
    "project-id",
    "sha",
  ],
  Object {
    "cwd": "<PROJECT_ROOT>",
  },
]
`;

exports[`AbstractCLI with mocked child_process.spawn files.list({"branchId": "branch-id", "projectId": "project-id", "sha": "sha"}) 2`] = `
Array [
  "./fixtures/abstract-cli",
  Array [
    "--user-token",
    "abstract-token",
    "--api-url",
    "https://api.goabstract.com",
    "files",
    "project-id",
    "sha",
  ],
  Object {
    "cwd": "<PROJECT_ROOT>",
  },
]
`;

exports[`AbstractCLI with mocked child_process.spawn files.list({"branchId": "branch-id", "projectId": "project-id"}) 1`] = `
Array [
  "./fixtures/abstract-cli",
  Array [
    "--user-token",
    "abstract-token",
    "--api-url",
    "https://api.goabstract.com",
    "files",
    "project-id",
    "branch-id",
  ],
  Object {
    "cwd": "<PROJECT_ROOT>",
  },
]
`;

exports[`AbstractCLI with mocked child_process.spawn layers.info({"branchId": "branch-id", "fileId": "file-id", "layerId": "layer-id", "pageId": "page-id", "projectId": "project-id", "sha": "layer-sha"}) 1`] = `
Array [
  "./fixtures/abstract-cli",
  Array [
    "--user-token",
    "abstract-token",
    "--api-url",
    "https://api.goabstract.com",
    "layer",
    "meta",
    "project-id",
    "layer-sha",
    "file-id",
    "layer-id",
  ],
  Object {
    "cwd": "<PROJECT_ROOT>",
  },
]
`;

exports[`AbstractCLI with mocked child_process.spawn layers.info({"branchId": "branch-id", "fileId": "file-id", "layerId": "layer-id", "pageId": "page-id", "projectId": "project-id", "sha": "sha"}) 1`] = `
Array [
  "./fixtures/abstract-cli",
  Array [
    "--user-token",
    "abstract-token",
    "--api-url",
    "https://api.goabstract.com",
    "layer",
    "meta",
    "project-id",
    "sha",
    "file-id",
    "layer-id",
  ],
  Object {
    "cwd": "<PROJECT_ROOT>",
  },
]
`;

exports[`AbstractCLI with mocked child_process.spawn layers.list({"branchId": "branch-id", "fileId": "file-id", "projectId": "project-id", "sha": "sha"}) 1`] = `
Array [
  "./fixtures/abstract-cli",
  Array [
    "--user-token",
    "abstract-token",
    "--api-url",
    "https://api.goabstract.com",
    "layers",
    "project-id",
    "sha",
    "file-id",
  ],
  Object {
    "cwd": "<PROJECT_ROOT>",
  },
]
`;

exports[`AbstractCLI with mocked child_process.spawn layers.list({"branchId": "branch-id", "fileId": "file-id", "projectId": "project-id"}) 1`] = `
Array [
  "./fixtures/abstract-cli",
  Array [
    "--user-token",
    "abstract-token",
    "--api-url",
    "https://api.goabstract.com",
    "layers",
    "project-id",
    "branch-id",
    "file-id",
  ],
  Object {
    "cwd": "<PROJECT_ROOT>",
  },
]
`;

exports[`AbstractCLI with mocked child_process.spawn pages.info({"branchId": "branch-id", "fileId": "file-id", "pageId": "page-id", "projectId": "project-id", "sha": "sha"}) 1`] = `
Array [
  "./fixtures/abstract-cli",
  Array [
    "--user-token",
    "abstract-token",
    "--api-url",
    "https://api.goabstract.com",
    "file",
    "project-id",
    "sha",
    "file-id",
  ],
  Object {
    "cwd": "<PROJECT_ROOT>",
  },
]
`;

exports[`AbstractCLI with mocked child_process.spawn pages.info({"branchId": "branch-id", "fileId": "file-id", "pageId": "page-id", "projectId": "project-id"}) 1`] = `
Array [
  "./fixtures/abstract-cli",
  Array [
    "--user-token",
    "abstract-token",
    "--api-url",
    "https://api.goabstract.com",
    "file",
    "project-id",
    "branch-id",
    "file-id",
  ],
  Object {
    "cwd": "<PROJECT_ROOT>",
  },
]
`;

exports[`AbstractCLI with mocked child_process.spawn pages.list({"branchId": "branch-id", "fileId": "file-id", "projectId": "project-id", "sha": "sha"}) 1`] = `
Array [
  "./fixtures/abstract-cli",
  Array [
    "--user-token",
    "abstract-token",
    "--api-url",
    "https://api.goabstract.com",
    "file",
    "project-id",
    "sha",
    "file-id",
  ],
  Object {
    "cwd": "<PROJECT_ROOT>",
  },
]
`;

exports[`AbstractCLI with mocked child_process.spawn pages.list({"branchId": "branch-id", "fileId": "file-id", "projectId": "project-id"}) 1`] = `
Array [
  "./fixtures/abstract-cli",
  Array [
    "--user-token",
    "abstract-token",
    "--api-url",
    "https://api.goabstract.com",
    "file",
    "project-id",
    "branch-id",
    "file-id",
  ],
  Object {
    "cwd": "<PROJECT_ROOT>",
  },
]
`;
